--- a/stackgres-k8s/src/api-web/src/main/swagger/schemas/PoolingConfigDto.yaml
+++ b/stackgres-k8s/src/api-web/src/main/swagger/schemas/PoolingConfigDto.yaml
@@ -28,7 +28,7 @@ schema:
         properties:
           clusters:
             description: |
-              The list of [SGClusters](https://stackgres.io/doc/latest/04-postgres-cluster-management/01-postgres-clusters/) that are using this configuration.
+              List of [SGClusters](https://stackgres.io/doc/latest/04-postgres-cluster-management/01-postgres-clusters/) that are using this configuration.
           pgBoucer:
             description: |
               Connection pooling configuration status based on PgBouncer.
