--- a/stackgres-k8s/src/api-web/src/main/swagger/schemas/PostgresConfigDto.yaml
+++ b/stackgres-k8s/src/api-web/src/main/swagger/schemas/PostgresConfigDto.yaml
@@ -24,7 +24,7 @@ schema:
         properties:
           clusters:
             description: |
-              The list of [SGClusters](https://stackgres.io/doc/latest/04-postgres-cluster-management/01-postgres-clusters/) that are using this configuration.
+              List of [SGClusters](https://stackgres.io/doc/latest/04-postgres-cluster-management/01-postgres-clusters/) that are using this configuration.
           postgresql.conf:
             items:
               description: |
