--- a/stackgres-k8s/src/jobs/src/main/resources/crds/SGCluster.yaml
+++ b/stackgres-k8s/src/jobs/src/main/resources/crds/SGCluster.yaml
@@ -1,4 +1,4 @@
-apiVersion: apiextensions.k8s.io/v1
+apiVersion: apiextensions.Kubernetes.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: sgclusters.stackgres.io
@@ -27,32 +27,32 @@ spec:
                 name:
                   type: string
                   description: |
-                    The name of the StackGres cluster to be created. Following [Kubernetes naming conventions](https://github.com/kubernetes/community/blob/master/contributors/design-proposals/architecture/identifiers.md), it must be an rfc1035/rfc1123 subdomain, that is, up to 253 characters consisting of one or more lowercase labels separated by `.`. Where each label is an alphanumeric (a-z, and 0-9) string, with a maximum length of 63 characters, with the `-` character allowed anywhere except the first or last character.
+                    Name of the StackGres cluster. Following [Kubernetes naming conventions](https://github.com/kubernetes/community/blob/master/contributors/design-proposals/architecture/identifiers.md), it must be an rfc1035/rfc1123 subdomain, that is, up to 253 characters consisting of one or more lowercase labels separated by `.`. Where each label is an alphanumeric (a-z, and 0-9) string, with a maximum length of 63 characters, with the `-` character allowed anywhere except the first or last character.
 
-                    This name needs to be unique across all StackGres clusters in the same namespace. The full cluster name will include the namespace in which the cluster will be created.
+                    The name must be unique across all StackGres clusters in the same namespace. The full cluster name includes the namespace in which the cluster is created.
             spec:
               type: object
               properties:
                 postgresVersion:
                   type: string
                   description: |
-                    Postgres version to use for the new cluster. It can be either of:
-                    *  The string 'latest', which will automatically select the latest major.minor Postgres version.
-                    *  A major version, like '12' or '11', which will select that major version and the latest minor version.
+                    Postgres version used on the cluster. It is either of:
+                    *  The string 'latest', which automatically sets the latest major.minor Postgres version.
+                    *  A major version, like '12' or '11', which sets that major version and the latest minor version.
                     *  A specific major.minor version, like '12.2'.
                 instances:
                   type: integer
                   minimum: 1
                   maximum: 16
                   description: |
-                    Number of StackGres instances to be created. Each instance will contain one Postgres server. Out of all of the Postgres servers, one will be elected as the master, the rest will remain as read-only replicas.
+                    Number of StackGres instances for the cluster. Each instance contains one Postgres server. Out of all of the Postgres servers, one is elected as the master, the rest remain as read-only replicas.
                 sgInstanceProfile:
                   type: string
                   description: |
-                    Name of the [SGInstanceProfile](https://stackgres.io/doc/latest/04-postgres-cluster-management/03-resource-profiles/) to use. A SGInstanceProfile defines CPU and memory limits. Must exist before creating the cluster. If you don't select a profile, a default (currently: 1 core, 2 GiB RAM) one will be used.
+                    Name of the [SGInstanceProfile](https://stackgres.io/doc/latest/04-postgres-cluster-management/03-resource-profiles/). A SGInstanceProfile defines CPU and memory limits. Must exist before creating a cluster. When no profile is set, a default (currently: 1 core, 2 GiB RAM) one is used.
                 metadata:
                   type: object
-                  description: StackGres cluster created resources metadata information.
+                  description: Metadata information from cluster created resources.
                   properties:
                     annotations:
                       type: object
@@ -87,96 +87,96 @@ spec:
                         type:
                           type: string
                           enum: ["ClusterIP", "LoadBalancer", "NodePort"]
-                          description: Specify the type of K8s service to create.
+                          description: Specifies the type of Kubernetes service.
                         annotations:
                           type: object
                           additionalProperties:
                             type: string
-                          description: Custom Kubernetes [annotations](https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/) to be passed to the `-primary` service.
+                          description: Custom Kubernetes [annotations](https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/) passed to the `-primary` service.
                     replicas:
                       type: object
                       description: Configuration for the `-replicas` service. It provides a stable connection (regardless of replica node failures) to any read-only Postgres server of the cluster. Read-only servers are load-balanced via this service.
                       properties:
                         enabled:
                           type: boolean
-                          description: SSpecify if the `-replicas` service should be created or not.
+                          description: Specify if the `-replicas` service should be created or not.
                         type:
                           type: string
                           enum: ["ClusterIP", "LoadBalancer", "NodePort"]
-                          description: Specify the type of K8s service to create.
+                          description: Specifies the type of Kubernetes service.
                         annotations:
                           type: object
                           additionalProperties:
                             type: string
-                          description: Custom Kubernetes [annotations](https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/) to be passed to the `-replicas` service.
+                          description: Custom Kubernetes [annotations](https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/) passed to the `-replicas` service.
                 pods:
                   type: object
-                  description: Cluster pod's configuration
+                  description: Cluster pod's configuration.
                   properties:
                     persistentVolume:
                       type: object
-                      description: Pod's persistent volume configuration
+                      description: Pod's persistent volume configuration.
                       properties:
                         size:
                           type: string
                           pattern: '^[0-9]+(\.[0-9]+)?(Mi|Gi|Ti)$'
                           description: |
-                            Size of the PersistentVolume to be created for each instance of the cluster. Size must be specified either in Mebibytes, Gibibytes or Tebibytes (multiples of 2^20, 2^30 or 2^40, respectively).
+                            Size of the PersistentVolume set for each instance of the cluster. This size is specified either in Mebibytes, Gibibytes or Tebibytes (multiples of 2^20, 2^30 or 2^40, respectively).
                         storageClass:
                           type: string
                           description: |
-                            Name of an existing StorageClass in the K8s cluster, that will be used to create the PersistentVolumes for the instances of this cluster.
+                            Name of an existing StorageClass in the Kubernetes cluster, used to create the PersistentVolumes for the instances of the cluster.
                       required: ["size"]
                     disableConnectionPooling:
                       type: boolean
-                      description: Set to `false` to avoid creating a connection pooling (using [PgBouncer](https://www.pgbouncer.org/)) sidecar.
+                      description: If set to `true`, avoids creating a connection pooling (using [PgBouncer](https://www.pgbouncer.org/)) sidecar.
                     disableMetricsExporter:
                       type: boolean
-                      description: Set to `false` to avoid creating the Prometheus exporter sidecar. Recommended if you don't intent to use Prometheus for monitoring.
+                      description: If set to `true`, avoids creating the Prometheus exporter sidecar. Recommended when there's no intention to use Prometheus for monitoring.
                     disablePostgresUtil:
                       type: boolean
-                      description: Set to `false` to avoid creating the `postgres-util` sidecar. This sidecar contains usual Postgres administration utilities *that are not present in the main (`patroni`) container*, like `psql`. Only disable if you know what you are doing.
+                      description: If set to `true`, avoids creating the `postgres-util` sidecar. This sidecar contains usual Postgres administration utilities *that are not present in the main (`patroni`) container*, like `psql`. Only disable if you know what you are doing.
                     metadata:
                       type: object
-                      description: Pod custom metadata information
+                      description: Pod custom metadata information.
                       properties:
                         labels:
                           type: object
                           additionalProperties:
                             type: string
-                          description: Additional labels for StackGres Pods to have
+                          description: Additional labels for StackGres Pods.
                     scheduling:
                       type: object
-                      description: Pod custom scheduling configuration
+                      description: Pod custom scheduling configuration.
                       properties:
                         nodeSelector:
                           type: object
                           additionalProperties:
                             type: string
-                          description: Pod custom node selector
+                          description: Pod custom node selector.
                   required: ["persistentVolume"]
                 configurations:
                   type: object
                   description: |
-                    Custom configuration to be applied to the cluster.
+                    Cluster custom configurations.
                   properties:
                     sgPostgresConfig:
                       type: string
                       description: |
-                        Name of the [SGPostgresConfig](https://stackgres.io/doc/latest/04-postgres-cluster-management/02-configuration-tuning/02-postgres-configuration/) to use for this cluster. It must exist. If not set, a default Postgres config, for the major version selected, will be used.
+                        Name of the [SGPostgresConfig](https://stackgres.io/doc/latest/04-postgres-cluster-management/02-configuration-tuning/02-postgres-configuration/) used for the cluster. It must exist. When not set, a default Postgres config, for the major version selected, is used.
                     sgPoolingConfig:
                       type: string
                       description: |
-                        Name of the [SGPoolingConfig](https://stackgres.io/doc/latest/04-postgres-cluster-management/02-configuration-tuning/03-connection-pooling-configuration/) to use for this cluster. Each pod contains a sidecar with a connection pooler (currently: [PgBouncer](https://www.pgbouncer.org/)). The connection pooler is implemented as a sidecar.
+                        Name of the [SGPoolingConfig](https://stackgres.io/doc/latest/04-postgres-cluster-management/02-configuration-tuning/03-connection-pooling-configuration/) used for this cluster. Each pod contains a sidecar with a connection pooler (currently: [PgBouncer](https://www.pgbouncer.org/)). The connection pooler is implemented as a sidecar.
 
-                        If not selected, a default configuration will be used. Note that you may disable connection pooling altogether by setting to false the disableConnectionPooling property of the pods object.
+                        If not set, a default configuration will be used. Disabling connection pooling altogether is possible if the disableConnectionPooling property of the pods object is set to true.
                     sgBackupConfig:
                       type: string
                       description: |
-                        Name of the [SGBackupConfig](https://stackgres.io/doc/latest/04-postgres-cluster-management/04-backups/) to use for this cluster. This will define the backups policy, storage and retention, among others, to apply to this cluster. If not set, a default backup config will be used.
+                        Name of the [SGBackupConfig](https://stackgres.io/doc/latest/04-postgres-cluster-management/04-backups/) to use for the cluster. It defines the backups policy, storage and retention, among others, applied to the cluster. When not set, a default backup config is used.
                 initialData:
                   type: object
-                  description: Cluster initialization data options. Cluster may be initialized empty, or from a backup restoration. You may also specify scripts to run on the database after cluster creation.
+                  description: Cluster initialization data options. Cluster may be initialized empty, or from a backup restoration. Specifying scripts to run on the database after cluster creation is also possible.
                   properties:
                     restore:
                       type: object
@@ -184,16 +184,16 @@ spec:
                         fromBackup:
                           type: string
                           description: |
-                            Initialize the cluster data by restoring an existing backup. If not used, cluster will be initialized empty. Set to the UID of an existing [SGBackup](https://stackgres.io/doc/latest/04-postgres-cluster-management/04-backups/) from which to restore the data. The backup needs to be in the same namespace.
+                            When set to the UID of an existing [SGBackup](https://stackgres.io/doc/latest/04-postgres-cluster-management/04-backups/), the cluster is initialized by restoring the backup data to it. If not set, the cluster is initialized empty. The selected backup must be in the same namespace.
                         downloadDiskConcurrency:
                           type: integer
                           minimum: 1
                           description: |
-                            The backup fetch process may fetch several streams in parallel. Specify a value larger than one for parallel fetching.
+                            The backup fetch process may fetch several streams in parallel. Parallel fetching is enabled when set to a value larger than one.
                     scripts:
                       type: array
                       description: |
-                        A list of SQL scripts that will be executed in sequence, exactly once, when the database is bootstrap and/or after restore is completed.
+                        A list of SQL scripts executed in sequence, exactly once, when the database is bootstrap and/or after restore is completed.
                       items:
                         type: object
                         description: |
@@ -204,15 +204,15 @@ spec:
                           name:
                             type: string
                             description: |
-                              The name of the script. Must be unique across this SGCluster.
+                              Name of the script. Must be unique across this SGCluster.
                           database:
                             type: string
                             description: |
-                              The database where the script will be executed. Defaults to the `postgres` database, if not specified.
+                              Database where the script is executed. Defaults to the `postgres` database, if not specified.
                           script:
                             type: string
                             description: |
-                              The raw SQL script to execute. This field is mutually exclusive with `scriptFrom` field.
+                              Raw SQL script to execute. This field is mutually exclusive with `scriptFrom` field.
                           scriptFrom:
                             type: object
                             description: |
@@ -247,7 +247,7 @@ spec:
                 prometheusAutobind:
                   type: boolean
                   description: |
-                    If enabled, a ServiceMonitor will be created for each Prometheus instance found in order to collect metrics.
+                    If enabled, a ServiceMonitor is created for each Prometheus instance found in order to collect metrics.
                 nonProductionOptions:
                   type: object
                   properties:
@@ -256,7 +256,7 @@ spec:
                       description: |
                         It is a best practice, on non-containerized environments, when running production workloads, to run each database server on a different server (virtual or physical), i.e., not to co-locate more than one database server per host.
 
-                        The same best practice applies to databases on containers. By default, StackGres will not allow to run more than one StackGres pod on a given K8s node. Set this property to true to allow more than one StackGres pod per node.
+                        The same best practice applies to databases on containers. By default, StackGres will not allow to run more than one StackGres pod on a given Kubernetes node. Set this property to true to allow more than one StackGres pod per node.
                 distributedLogs:
                   type: object
                   description: StackGres features a functionality for all pods to send Postgres, Patroni and PgBouncer logs to a central (distributed) location, which is in turn another Postgres database. Logs can then be accessed via SQL interface or from the web UI. This section controls whether to enable this feature or not. If not enabled, logs are send to the pod's standard output.
