--- a/stackgres-k8s/src/jobs/src/main/resources/crds/SGDistributedLogs.yaml
+++ b/stackgres-k8s/src/jobs/src/main/resources/crds/SGDistributedLogs.yaml
@@ -29,11 +29,11 @@ spec:
                 name:
                   type: string
                   description: |
-                    The name of the Distributed Logs cluster to be created. Following [Kubernetes naming conventions](https://github.com/kubernetes/community/blob/master/contributors/design-proposals/architecture/identifiers.md), it must be an rfc1035/rfc1123 subdomain, that is, up to 253 characters consisting of one or more lowercase labels separated by `.`. Where each label is an alphanumeric (a-z, and 0-9) string, with a maximum length of 63 characters, with the `-` character allowed anywhere except the first or last character.
+                    Name of the Distributed Logs cluster. Following [Kubernetes naming conventions](https://github.com/kubernetes/community/blob/master/contributors/design-proposals/architecture/identifiers.md), it must be an rfc1035/rfc1123 subdomain, that is, up to 253 characters consisting of one or more lowercase labels separated by `.`. Where each label is an alphanumeric (a-z, and 0-9) string, with a maximum length of 63 characters, with the `-` character allowed anywhere except the first or last character.
 
                     A Distributed Logs cluster may store logs for zero or more SGClusters.
 
-                    This name needs to be unique across all Distributed Logs and StackGres clusters in the same namespace. The full cluster name will include the namespace in which the cluster will be created.
+                    The name must be unique across all Distributed Logs and StackGres clusters in the same namespace. The full cluster name includes the namespace in which the cluster is created.
             spec:
               type: object
               properties:
@@ -45,11 +45,11 @@ spec:
                       type: string
                       pattern: '^[0-9]+(\.[0-9]+)?(Mi|Gi|Ti)$'
                       description: |
-                        Size of the PersistentVolume to be created for the pod of the cluster for distributed logs. Size must be specified either in Mebibytes, Gibibytes or Tebibytes (multiples of 2^20, 2^30 or 2^40, respectively).
+                        Size of the PersistentVolume set for the pod of the cluster for distributed logs. This size is specified either in Mebibytes, Gibibytes or Tebibytes (multiples of 2^20, 2^30 or 2^40, respectively).
                     storageClass:
                       type: string
                       description: |
-                        Name of an existing StorageClass in the K8s cluster, that will be used to create the PersistentVolumes for the instances of this cluster.
+                        Name of an existing StorageClass in the Kubernetes cluster, used to create the PersistentVolumes for the instances of the cluster.
                   required: ["size"]
                 nonProductionOptions:
                   type: object
@@ -59,5 +59,5 @@ spec:
                       description: |
                         It is a best practice, on non-containerized environments, when running production workloads, to run each database server on a different server (virtual or physical), i.e., not to co-locate more than one database server per host.
 
-                        The same best practice applies to databases on containers. By default, StackGres will not allow to run more than one StackGres or Distributed Logs pod on a given K8s node. Set this property to true to allow more than one StackGres pod per node.
+                        The same best practice applies to databases on containers. By default, StackGres will not allow to run more than one StackGres or Distributed Logs pod on a given Kubernetes node. If set to `true` it will allow more than one StackGres pod per node.
               required: ["persistentVolume"]
